[gd_scene load_steps=89 format=3 uid="uid://dm5wb0td1jubk"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_38mb3"]
[ext_resource type="Texture2D" uid="uid://csm3ydfgehqtq" path="res://icon.svg" id="2_0e8lk"]
[ext_resource type="Texture2D" uid="uid://vpo6mxganes2" path="res://Assets/Player/PlayerSprite.png" id="2_ajy0y"]
[ext_resource type="Texture2D" uid="uid://c31gs752c20rt" path="res://Assets/Player/FireSpell.png" id="2_ei36o"]
[ext_resource type="Texture2D" uid="uid://4vyuj76erygn" path="res://Assets/Player/ForceMagic.png" id="3_fonwl"]
[ext_resource type="PackedScene" uid="uid://dha2g71f7mqty" path="res://Scenes/UI.tscn" id="4_wwuuh"]
[ext_resource type="PackedScene" uid="uid://d23hufw16h5j1" path="res://Scenes/BookMenu.tscn" id="7_leujk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ljd6"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8ncj"]
size = Vector2(14, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt6wu"]
atlas = ExtResource("2_ei36o")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2d2c"]
atlas = ExtResource("2_ei36o")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8yc0"]
atlas = ExtResource("2_ei36o")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc0wr"]
atlas = ExtResource("2_ei36o")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2uvn"]
atlas = ExtResource("2_ei36o")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7615k"]
atlas = ExtResource("2_ei36o")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6240"]
atlas = ExtResource("3_fonwl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h46p"]
atlas = ExtResource("3_fonwl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rcau"]
atlas = ExtResource("3_fonwl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgggt"]
atlas = ExtResource("3_fonwl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nulp5"]
atlas = ExtResource("3_fonwl")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvxk"]
atlas = ExtResource("3_fonwl")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nomw3"]
atlas = ExtResource("3_fonwl")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jwek5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt6wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2d2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8yc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc0wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2uvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7615k")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Fire",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6240")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h46p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rcau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgggt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nulp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nomw3")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Force",
"speed": 16.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cg31k"]
atlas = ExtResource("2_ajy0y")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4k3a"]
atlas = ExtResource("2_ajy0y")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rlcn"]
atlas = ExtResource("2_ajy0y")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_30tb6"]
atlas = ExtResource("2_ajy0y")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0v23"]
atlas = ExtResource("2_ajy0y")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kluv"]
atlas = ExtResource("2_ajy0y")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48sc7"]
atlas = ExtResource("2_ajy0y")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asxn3"]
atlas = ExtResource("2_ajy0y")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d22y"]
atlas = ExtResource("2_ajy0y")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20yfe"]
atlas = ExtResource("2_ajy0y")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5uba"]
atlas = ExtResource("2_ajy0y")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77rgk"]
atlas = ExtResource("2_ajy0y")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtga7"]
atlas = ExtResource("2_ajy0y")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l50w2"]
atlas = ExtResource("2_ajy0y")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwqcc"]
atlas = ExtResource("2_ajy0y")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aod5w"]
atlas = ExtResource("2_ajy0y")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tce1"]
atlas = ExtResource("2_ajy0y")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrvuq"]
atlas = ExtResource("2_ajy0y")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pb7q"]
atlas = ExtResource("2_ajy0y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef0kc"]
atlas = ExtResource("2_ajy0y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6rqo"]
atlas = ExtResource("2_ajy0y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0yew"]
atlas = ExtResource("2_ajy0y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jcab"]
atlas = ExtResource("2_ajy0y")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smo6l"]
atlas = ExtResource("2_ajy0y")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bugdp"]
atlas = ExtResource("2_ajy0y")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0esa"]
atlas = ExtResource("2_ajy0y")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7dct"]
atlas = ExtResource("2_ajy0y")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw5fn"]
atlas = ExtResource("2_ajy0y")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oti1x"]
atlas = ExtResource("2_ajy0y")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtiph"]
atlas = ExtResource("2_ajy0y")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1k4g"]
atlas = ExtResource("2_ajy0y")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r68xm"]
atlas = ExtResource("2_ajy0y")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqkh7"]
atlas = ExtResource("2_ajy0y")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2cax"]
atlas = ExtResource("2_ajy0y")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocao7"]
atlas = ExtResource("2_ajy0y")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax6wu"]
atlas = ExtResource("2_ajy0y")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kkeo"]
atlas = ExtResource("2_ajy0y")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gp2r"]
atlas = ExtResource("2_ajy0y")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo63c"]
atlas = ExtResource("2_ajy0y")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5b8g"]
atlas = ExtResource("2_ajy0y")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68uct"]
atlas = ExtResource("2_ajy0y")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hihh"]
atlas = ExtResource("2_ajy0y")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sboy"]
atlas = ExtResource("2_ajy0y")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64aly"]
atlas = ExtResource("2_ajy0y")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_170xg"]
atlas = ExtResource("2_ajy0y")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3ncf"]
atlas = ExtResource("2_ajy0y")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlkb0"]
atlas = ExtResource("2_ajy0y")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bu63"]
atlas = ExtResource("2_ajy0y")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_174vi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg31k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4k3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rlcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30tb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0v23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kluv")
}],
"loop": true,
"name": &"Back (Idle)",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48sc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asxn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d22y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20yfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5uba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77rgk")
}],
"loop": true,
"name": &"Back (Walking)",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtga7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l50w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwqcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aod5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tce1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrvuq")
}],
"loop": true,
"name": &"Forward (Idle)",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pb7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef0kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6rqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0yew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jcab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smo6l")
}],
"loop": true,
"name": &"Forward (Walking)",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bugdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0esa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7dct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw5fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oti1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtiph")
}],
"loop": true,
"name": &"Left (Idle)",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1k4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r68xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqkh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2cax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocao7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax6wu")
}],
"loop": true,
"name": &"Left (Walking)",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kkeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gp2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo63c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5b8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68uct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hihh")
}],
"loop": true,
"name": &"Right (Idle)",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sboy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64aly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_170xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3ncf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlkb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bu63")
}],
"loop": true,
"name": &"Right (Walking)",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_de233"]
size = Vector2(16, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3y7dt"]
size = Vector2(2, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pw2ub"]
size = Vector2(16, 1.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkyiq"]
size = Vector2(16, 8)

[sub_resource type="Animation" id="Animation_n0fiv"]
resource_name = "(Activate) FireTop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireAreaTop:monitorable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireAreaTop/TopCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1e-05),
"update": 0,
"values": [Vector2(0, -22), Vector2(0, -57)]
}

[sub_resource type="Animation" id="Animation_so8ry"]
resource_name = "(Activate) Force Bottom"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForceArea/ForceColl:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ForceArea/ForceColl:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1e-05),
"update": 0,
"values": [Vector2(0, 4), Vector2(0, 28)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ForceArea:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bxtlq"]
resource_name = "(Activate) Force Left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForceArea/ForceColl:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ForceArea/ForceColl:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1e-05),
"update": 0,
"values": [Vector2(0, 8), Vector2(-20, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ForceArea:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_f1hhn"]
resource_name = "(Activate) Force Right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForceArea/ForceColl:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ForceArea/ForceColl:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 2.65672e-05),
"update": 0,
"values": [Vector2(0, 8), Vector2(20, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ForceArea:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3nqeu"]
resource_name = "(Activate) Force Top"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForceArea/ForceColl:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ForceArea/ForceColl:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1e-05),
"update": 0,
"values": [Vector2(0, 12), Vector2(0, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ForceArea:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vxdvp"]
resource_name = "(Activate) Left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireAreaLeft:monitorable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireAreaLeft/SideCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1e-05),
"update": 0,
"values": [Vector2(-4, 8), Vector2(-23, 8)]
}

[sub_resource type="Animation" id="Animation_xsupu"]
resource_name = "(Activate) Right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireAreaLeft:monitorable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireAreaLeft/SideCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 8), Vector2(23, 8)]
}

[sub_resource type="Animation" id="Animation_ikmct"]
resource_name = "Activate (Bottom)"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireAreaBott:monitorable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireAreaBott/BottCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1e-05),
"update": 0,
"values": [Vector2(0, 4), Vector2(0, 23)]
}

[sub_resource type="Animation" id="Animation_n2huf"]
resource_name = "Ending"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GreyRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GreyRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_pp56e"]
resource_name = "Reset"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireAreaTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 18)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireAreaTop:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireAreaLeft:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireAreaLeft/SideCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FireAreaBott/BottCollision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FireAreaBott:monitorable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ForceArea:monitorable")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("FireAreaTop/TopCollision:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -22)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tc3bw"]
_data = {
"(Activate) FireTop": SubResource("Animation_n0fiv"),
"(Activate) Force Bottom": SubResource("Animation_so8ry"),
"(Activate) Force Left": SubResource("Animation_bxtlq"),
"(Activate) Force Right": SubResource("Animation_f1hhn"),
"(Activate) Force Top": SubResource("Animation_3nqeu"),
"(Activate) Left": SubResource("Animation_vxdvp"),
"(Activate) Right": SubResource("Animation_xsupu"),
"Activate (Bottom)": SubResource("Animation_ikmct"),
"Ending": SubResource("Animation_n2huf"),
"Reset": SubResource("Animation_pp56e")
}

[sub_resource type="CanvasTexture" id="CanvasTexture_elmm4"]

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_38mb3")

[node name="ActionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="ActionColl" type="CollisionShape2D" parent="ActionArea"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_2ljd6")

[node name="BaseCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_q8ncj")

[node name="Spells" type="AnimatedSprite2D" parent="."]
visibility_layer = 3
position = Vector2(-1.90735e-06, -16)
sprite_frames = SubResource("SpriteFrames_jwek5")
animation = &"Force"
frame = 7
frame_progress = 1.0

[node name="Test" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_0e8lk")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_174vi")
animation = &"Forward (Walking)"

[node name="FireAreaTop" type="Area2D" parent="." groups=["Fire"]]
position = Vector2(0, 18)

[node name="TopCollision" type="CollisionShape2D" parent="FireAreaTop"]
position = Vector2(0, -22)
shape = SubResource("RectangleShape2D_de233")
debug_color = Color(0.99931, 0, 0.117184, 0.42)

[node name="FireAreaLeft" type="Area2D" parent="." groups=["Fire"]]
position = Vector2(0, -16)

[node name="SideCollision" type="CollisionShape2D" parent="FireAreaLeft"]
position = Vector2(23, 8)
shape = SubResource("RectangleShape2D_3y7dt")
debug_color = Color(1, 0, 0.117647, 0.419608)

[node name="FireAreaBott" type="Area2D" parent="." groups=["Fire"]]
position = Vector2(0, -8)

[node name="BottCollision" type="CollisionShape2D" parent="FireAreaBott"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_pw2ub")
debug_color = Color(1, 0, 0.117647, 0.419608)

[node name="ForceArea" type="Area2D" parent="." groups=["Force"]]
position = Vector2(0, -16)
collision_layer = 9
collision_mask = 9
monitorable = false

[node name="ForceColl" type="CollisionShape2D" parent="ForceArea" groups=["Force"]]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_wkyiq")
debug_color = Color(0.895278, 0.000208117, 0.778644, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="UI" parent="Camera2D" instance=ExtResource("4_wwuuh")]
follow_viewport_enabled = false

[node name="BookMenu" parent="Camera2D" instance=ExtResource("7_leujk")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tc3bw")
}

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -16)

[node name="GreyRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = -176.0
offset_top = -96.0
offset_right = 184.0
offset_bottom = 96.0
texture = SubResource("CanvasTexture_elmm4")
